// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider with axis \`x\` should render properly 1`] = `
<div style="box-sizing: border-box; display: inline-block; padding: 6px; transition: height 0.4s, width 0.4s; height: 32px; width: 100%;"
     class="rrs"
>
  <div class="rrs__track"
       style="background-color: rgb(204, 204, 204); border-radius: 3px; box-sizing: border-box; height: 20px; position: relative; width: 100%;"
       role="presentation"
  >
    <div class="rrs__range"
         style="width: 0%; background-color: rgb(0, 123, 255); border-radius: 3px; position: absolute; height: 100%; top: 0px;"
    >
    </div>
    <div style="box-sizing: border-box; height: 20px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
         role="presentation"
    >
      <span class="rrs__handle"
            style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 26px; left: -5px; top: -3px; width: 10px;"
            tabindex="0"
            role="slider"
            aria-label="slider handle"
            aria-orientation="horizontal"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuemax="100"
      >
      </span>
    </div>
  </div>
</div>
`;

exports[`RangeSlider with axis \`xy\` should render properly 1`] = `
<div style="box-sizing: border-box; display: inline-block; padding: 6px; transition: height 0.4s, width 0.4s; height: 100%; width: 100%;"
     class="rrs"
>
  <div class="rrs__track"
       style="background-color: rgb(204, 204, 204); border-radius: 3px; box-sizing: border-box; height: 100%; position: relative; width: 100%; min-height: 50px;"
       role="presentation"
  >
    <div class="rrs__range"
         style="height: 100%; width: 100%; background-color: rgb(0, 123, 255); border-radius: 3px; position: absolute; bottom: 0px;"
    >
    </div>
    <div style="box-sizing: border-box; height: 20px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 100%; bottom: 100%;"
         role="presentation"
    >
      <span class="rrs__handle"
            style="background-color: transparent; border: 2px solid #000; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; bottom: -10px; height: 20px; left: -10px; width: 20px;"
            tabindex="0"
            role="slider"
            aria-label="slider handle"
            aria-valuemin="0"
            aria-valuenow="20"
            aria-valuemax="20"
      >
      </span>
    </div>
  </div>
</div>
`;

exports[`RangeSlider with axis \`y\` should render properly 1`] = `
<div style="box-sizing: border-box; display: inline-block; padding: 6px; transition: height 0.4s, width 0.4s; height: 100%; width: 32px;"
     class="rrs"
>
  <div class="rrs__track"
       style="background-color: rgb(204, 204, 204); border-radius: 3px; box-sizing: border-box; height: 100%; position: relative; width: 20px; min-height: 50px;"
       role="presentation"
  >
    <div class="rrs__range"
         style="height: 0%; background-color: rgb(0, 123, 255); border-radius: 3px; position: absolute; bottom: 0px; left: 0px; width: 100%;"
    >
    </div>
    <div style="box-sizing: border-box; height: 20px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
         role="presentation"
    >
      <span class="rrs__handle"
            style="background-color: rgb(255, 255, 255); border: 2px solid #000; border-radius: 4px; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; bottom: -5px; height: 10px; left: -3px; width: 26px;"
            tabindex="0"
            role="slider"
            aria-label="slider handle"
            aria-orientation="vertical"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuemax="100"
      >
      </span>
    </div>
  </div>
</div>
`;
